# ConsensusRecSplit

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
benchmark/: benchmark_construction.cpp
include/: Consensus.h  ConsensusRecSplit.h  ConsensusRecSplitLevelwise.h  ConsensusRecSplitQueryOptimized.h
include/consensus/: BumpedKPerfectHashFunction.h  SplittingTreeStorage.h  SplittingTreeStorageLevelwise.h  SplittingTreeStorageQueryOptimized.h  UnalignedBitVector.h  util.h
